--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
+    "flowbite": "^2.5.2",
     "framer-motion": "^11.15.0",
+    "heroicons": "^2.2.0",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
