--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-modal-video": "^2.0.1"
+    "react-modal-video": "^2.0.1",
+    "react-slick": "^0.30.3",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
