--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "flowbite": "^2.5.2",
     "framer-motion": "^11.15.0",
     "heroicons": "^2.2.0",
+    "lightgallery": "^2.8.2",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
+    "react-lightgallery": "^0.9.0",
     "react-modal-video": "^2.0.1",
     "react-slick": "^0.30.3",
     "swiper": "^11.1.15"
