--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "aos": "^2.3.4",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
     "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
+    "fontawesome": "^5.6.3",
     "framer-motion": "^11.15.0",
     "heroicons": "^2.2.0",
     "lightgallery": "^2.8.2",
