--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-modal-video": "^2.0.1",
+    "react-multi-carousel": "^2.8.5",
     "react-slick": "^0.30.3",
-    "swiper": "^11.1.15"
+    "swiper": "^11.1.15",
+    "yet-another-react-lightbox": "^3.21.7"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
