--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "heroicons": "^2.2.0",
     "lightgallery": "^2.8.2",
     "next": "^14.1.0",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
