--- a/package.json
+++ b/package.json
@@ -12,20 +12,26 @@
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^2.6.0",
     "aos": "^2.3.4",
+    "dayjs": "^1.11.13",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
     "flag-icons": "^7.2.3",
+    "flatpickr": "^4.6.13",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "fontawesome": "^5.6.3",
+    "formik": "^2.4.6",
     "framer-motion": "^11.15.0",
     "heroicons": "^2.2.0",
     "lightgallery": "^2.8.2",
+    "lucide-react": "^0.477.0",
     "next": "^14.1.0",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^18.2.0",
+    "react-flatpickr": "^3.10.13",
     "react-icons": "^5.4.0",
     "react-international-phone": "^4.4.0",
     "react-modal-video": "^2.0.1",
@@ -33,9 +39,11 @@
     "react-phone-number-input": "^3.4.10",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
+    "react-tailwindcss-datepicker": "^2.0.0",
     "react-world-flags": "^1.6.0",
     "swiper": "^11.1.15",
-    "yet-another-react-lightbox": "^3.21.7"
+    "yet-another-react-lightbox": "^3.21.7",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
