--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.15.0",
     "heroicons": "^2.2.0",
+    "js-cookie": "^3.0.5",
     "jsvectormap": "^1.6.0",
     "lightgallery": "^2.8.2",
     "lucide-react": "^0.477.0",
