--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "^14.1.0",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.10.1",
     "react": "^18.2.0",
     "react-datepicker": "^8.1.0",
     "react-dom": "^18.2.0",
@@ -43,6 +44,7 @@
     "react-slick": "^0.30.3",
     "react-tailwindcss-datepicker": "^2.0.0",
     "react-world-flags": "^1.6.0",
+    "sweetalert2": "^11.17.2",
     "swiper": "^11.1.15",
     "yet-another-react-lightbox": "^3.21.7",
     "yup": "^1.6.1"
