--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 NEXT_PUBLIC_BASE_URL="http://localhost:8000/api"
-# NEXT_PUBLIC_EMAIL_USER="andriambolaradoniainamichael@gmail.com"
-# NEXT_PUBLIC_EMAIL_PASS="naav jzgg cirt bhky"
+NEXT_PUBLIC_EMAIL_USER="andriambolaradoniainamichael@gmail.com"
+NEXT_PUBLIC_EMAIL_PASS="naav jzgg cirt bhky"
 
 
-NEXT_PUBLIC_EMAIL_USER=scolarite@e-mediauniversity.io
-NEXT_PUBLIC_EMAIL_PASS=Gate07Nov2011
-NEXT_PUBLIC_EMAIL_HOST=mail.e-mediauniversity.io
-NEXT_PUBLIC_EMAIL_PORT=587
-NEXT_PUBLIC_EMAIL_SECURE=false
+# NEXT_PUBLIC_EMAIL_USER=scolarite@e-mediauniversity.io
+# NEXT_PUBLIC_EMAIL_PASS=Gate07Nov2011
+# NEXT_PUBLIC_EMAIL_HOST=mail.e-mediauniversity.io
+# NEXT_PUBLIC_EMAIL_PORT=587
+# NEXT_PUBLIC_EMAIL_SECURE=false
